# automaton_auditor2

./: .env.example  README.md  pyproject.toml  rubric.json
audit/report_onpeer_generated/: digital_courtroom_audit3.md
audit/report_onself_generated/: automaton_auditor.md
src/: __init__.py  graph.py  main.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
